[REFACTOR]: 비효율 메서드 삭제 및 포매터 적용